Updated Bioinformatics Supplement

--- a/vignettes/RERConverge.bib
+++ b/vignettes/RERConverge.bib
@@ -35,3 +35,56 @@ url = {https://academic.oup.com/mbe/article-lookup/doi/10.1093/molbev/msw112 htt
 volume = {33},
 year = {2016}
 }
+@misc{Benjamini1995,
+abstract = {The common approach to the multiplicity problem calls for controlling the familywise error rate (FWER). This approach, though, has faults, and we point out a few. A different approach to problems of multiple significance testing is presented. It calls for controlling the expected proportion of falsely rejected hypotheses-the false discovery rate. This error rate is equivalent to the FWER when all hypotheses are true but is smaller otherwise. Therefore, in problems where the control of the false discovery rate rather than that of the FWER is desired, there is potential for a gain in power. A simple sequential Bonferroni-type procedure is proved to control the false discovery rate for independent test statistics, and a simulation study shows that the gain in power is substantial. The use of the new procedure and the appropriateness of the criterion are illustrated with examples.},
+author = {Benjamini, Yoav and Hochberg, Yosef},
+booktitle = {Journal of the Royal Statistical Society. Series B (Methodological)},
+doi = {10.2307/2346101},
+pages = {289--300},
+publisher = {WileyRoyal Statistical Society},
+title = {{Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing}},
+url = {http://www.jstor.org/stable/2346101},
+volume = {57},
+year = {1995}
+}
+@article{Meyer2018,
+abstract = {Mammals diversified by colonizing drastically different environments, with each transition yielding numerous molecular changes, including losses of protein function. Though not initially deleterious, these losses could subsequently carry deleterious pleiotropic consequences. We have used phylogenetic methods to identify convergent functional losses across independent marine mammal lineages. In one extreme case, Paraoxonase 1 (PON1) accrued lesions in all marine lineages, while remaining intact in all terrestrial mammals. These lesions coincide with PON1 enzymatic activity loss in marine species' blood plasma. This convergent loss is likely explained by parallel shifts in marine ancestors' lipid metabolism and/or bloodstream oxidative environment affecting PON1's role in fatty acid oxidation. PON1 loss also eliminates marine mammals' main defense against neurotoxicity from specific man-made organophosphorus compounds, implying potential risks in modern environments.},
+author = {Meyer, Wynn K and Jamison, Jerrica and Richter, Rebecca and Woods, Stacy E and Partha, Raghavendran and Kowalczyk, Amanda and Kronk, Charles and Chikina, Maria and Bonde, Robert K and Crocker, Daniel E and Gaspard, Joseph and Lanyon, Janet M and Marsillach, Judit and Furlong, Clement E and Clark, Nathan L},
+doi = {10.1126/science.aap7714},
+file = {:Users/wynnmeyer/Library/Application Support/Mendeley Desktop/Downloaded/Meyer et al. - 2018 - Ancient convergent losses of Paraoxonase 1 yield potential risks for modern marine mammals.pdf:pdf},
+issn = {1095-9203},
+journal = {Science (New York, N.Y.)},
+month = {aug},
+number = {6402},
+pages = {591--594},
+pmid = {30093596},
+publisher = {American Association for the Advancement of Science},
+title = {{Ancient convergent losses of Paraoxonase 1 yield potential risks for modern marine mammals.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/30093596},
+volume = {361},
+year = {2018}
+}
+@Article{Rcpp,
+    title = {{Rcpp}: Seamless {R} and {C++} Integration},
+    author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {8},
+    pages = {1--18},
+    url = {http://www.jstatsoft.org/v40/i08/},
+    doi = {10.18637/jss.v040.i08}
+}
+@article {ParthaRobustRER,
+	author = {Partha, Raghavendran and Kowalczyk, Amanda and Clark, Nathan L and Chikina, Maria},
+	title = {Robust methods for detecting convergent shifts in evolutionary rates},
+	year = {2018},
+	doi = {10.1101/457309},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Identifying genomic elements underlying phenotypic adaptations is an important problem in evolutionary biology. Comparative analyses learning from convergent evolution of traits are gaining momentum in accurately detecting such elements. We previously developed a method for predicting phenotypic associations of genetic elements by contrasting patterns of sequence evolution in species showing a phenotype with those that do not. Using this method, we successfully demonstrated convergent evolutionary rate shifts in genetic elements associated with two phenotypic adaptations, namely the independent subterranean and marine transitions of terrestrial mammalian lineages. Our method calculates gene-specific rates of evolution on branches of phylogenetic trees using linear regression. These rates represent the extent of sequence divergence on a branch after removing the expected divergence on the branch due to background factors. The rates calculated using this regression analysis exhibit an important statistical limitation, namely heteroscedasticity. We observe that the rates on branches that are longer on average show higher variance, and describe how this problem adversely affects the confidence with which we can make inferences about rate shifts. Using a combination of data transformation and weighted regression, we have developed an updated method that corrects this heteroscedasticity in the rates. We additionally illustrate the improved performance offered by the updated method at robust detection of convergent rate shifts in phylogenetic trees of protein-coding genes across mammals, as well as using simulated tree datasets. Overall, we present an important extension to our evolutionary-rates-based method that performs more robustly and consistently at detecting convergent shifts in evolutionary rates.},
+	URL = {https://www.biorxiv.org/content/early/2018/10/30/457309},
+	eprint = {https://www.biorxiv.org/content/early/2018/10/30/457309.full.pdf},
+	journal = {bioRxiv}
+}
+
+
