--- a/vignettes/FullWalkthroughUTD.Rmd
+++ b/vignettes/FullWalkthroughUTD.Rmd
@@ -68,6 +68,7 @@ rerpath = find.package('RERconverge') #If this errors, there is an issue with in
 print(rerpath)
 ```
 
+
 ## Reading in gene trees with `readTrees`
 
 To run RERconverge, you will first need to supply a file containing **gene trees** for all genes to be included in your analysis. This is a tab delimited file with the following information on each line:
@@ -462,7 +463,7 @@ data("RERresults")
 
 ## Deriving a ranked gene list
 
-We will perform our enrichment on Rho-signed negative log p-values from our correlation results.  The *getStat* function converts our correlation results to these values and removes NA values.
+We will perform our enrichment on Rho-signed negative log p-values from our correlation results.  The *getStat* function converts our correlation results to these values, removes NA values, and returns a named numeric vector where names correspond to rownames from the correlation results (in this case, gene names).
 
 ```{r cache=T}
 library(RERconverge)
@@ -482,7 +483,9 @@ annots=read.gmt("gmtfile.gmt")
 
 ## Format Pathway Annotations
 
-RERconverge enrichment functions expect pathways to be in named pathway-group lists contained within a list.   A pathway-group is a group of similar pathways stored together (for example KEGG pathways might be one pathway-group and MGI pathways might be another pathway-group).  Each pathway-group list contains a named list called *genesets* with each element of the list a list of gene names in a particular pathway, and the names of the elements the names of the pathways.  The names of the genesets are also contained as a character vector in the second element of the pathway-group list named *geneset.names*.  As an example of correctly-formatted annotations, you would have a list called *annotations* that contains another list called *canonicalpathways*.  The *canonicalpathways* list contains a list named *genesets* and a vector named *geneset.names*.  Each element of the *genesets* list is a list of gene names corresponding to a particular pathways, and the names of the elements in *genesets* are the names of the pathways.  The *geneset.names* vector contains the names of the elements in *genesets*. 
+![](annotationformatsketch.png)
+
+RERconverge enrichment functions expect pathways to be in named pathway-group lists contained within a list (see diagram above).   A pathway-group is a group of similar pathways stored together (for example KEGG pathways might be one pathway-group and MGI pathways might be another pathway-group).  Each pathway-group list contains a named list called *genesets* with each element of the list a character vector of gene names in a particular pathway, and the names of the elements the names of the pathways.  The names of the genesets are also contained as a character vector in the second element of the pathway-group list named *geneset.names*.  As an example of correctly-formatted annotations, you would have a list called *annotations* that contains another list called *canonicalpathways*.  The *canonicalpathways* list contains a list named *genesets* and a vector named *geneset.names*.  Each element of the *genesets* list is a character vector of gene names corresponding to a particular pathway, and the names of the elements in *genesets* are the names of the pathways.  The *geneset.names* vector contains the names of the elements in *genesets*. 
  
 To convert our gmt file to the correct format, we simply need to put it inside another list; the *read.gmt* function automatically reads in gmt files in the format described above.
 
@@ -492,7 +495,7 @@ annotlist=list(annots)
 names(annotlist)="MSigDBpathways"
 ```
 
-## Calculate Enrichment Using *fastwilcoxGMTAll*
+## Calculate Enrichment Using *fastwilcoxGMTall*
 
 We can now use *annotlist* and *stats* to calculate pathway enrichment.  We will use the function *fastwilcoxGMTAll*, which calculates the estimated Wilcoxon Rank-Sum statistics based on the ranks of the genes in *stats*.  The test essentially measures the distribution shift in ranks of genes of interest (each pathway) compared to the background rank distribution (ranks of all other genes included in the pathway-group annotations that are not part of the pathway of interest).  We set *outputGeneVals* to true so the function returns names of the genes in the pathway and their ranks.  *num.g* specifies the minimum number of genes required to be present to run the enrichment (10 by default).
 
